--- a/FreeMoVR Server/MainWindow.xaml
+++ b/FreeMoVR Server/MainWindow.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
-    <Grid VerticalAlignment="Center">
-        <TextBlock Name="Messages" Text="Hello World" FontSize="24" HorizontalAlignment="Center"/>
+    <Grid x:Name="Layout" VerticalAlignment="Center">
+        <TextBlock x:Name="Messages" Text="Hello World" FontSize="24" HorizontalAlignment="Center"/>
     </Grid>
 
 
