--- a/FreeMoVR Server/vJoy.xaml
+++ b/FreeMoVR Server/vJoy.xaml
@@ -1,13 +1,14 @@
-﻿<Page x:Class="FreeMoVR_Server.vJoy"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-	Title="vJoy">
-
-    <Grid>
-        
+﻿<UserControl x:Class="FreeMoVR_Server.vJoy"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             mc:Ignorable="d" 
+             d:DesignHeight="350" d:DesignWidth="525">
+    <Grid x:Name="Layout" VerticalAlignment="Center">
+        <StackPanel>
+            <TextBlock x:Name="vJoyTitle" Text="vJoy" FontSize="32" HorizontalAlignment="Center" FontFamily="Segoe UI Light"/>
+            <!--<Button x:Name="vJoy" Content="vJoy" Width="50"/>-->
+        </StackPanel>
     </Grid>
-</Page>
+</UserControl>
