--- a/FreeMoVR Server3/Views/Control.xaml
+++ b/FreeMoVR Server3/Views/Control.xaml
@@ -2,10 +2,55 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="525">
-    <Grid>
-        <TextBlock Text="DERP"/>
+    <Grid Name="Layout">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        
+        <!-- vJoy Content -->
+        <Grid Name="vJoy_Content" Grid.Row="0" Grid.Column="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center"
+                Content="Product" FontSize="16" HorizontalAlignment="Right" Margin="5"/>
+            <Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center"
+                Content="Manufacturer" FontSize="16" HorizontalAlignment="Right" Margin="5"/>
+            <Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center"
+                Content="Version" FontSize="16" HorizontalAlignment="Right" Margin="5"/>
+            <Label Grid.Row="3" Grid.Column="0" VerticalAlignment="Center"
+                Content="Serial" FontSize="16" HorizontalAlignment="Right" Margin="5"/>
+
+            <TextBox Grid.Row="0" Grid.Column="1" VerticalAlignment="Center"
+                IsReadOnly="True" Margin="5" Controls:TextboxHelper.Watermark="{Binding ElementName=vJoy_Content}"/>
+            <TextBox Grid.Row="1" Grid.Column="1" VerticalAlignment="Center"
+                IsReadOnly="True" Margin="5"/>
+            <TextBox Grid.Row="2" Grid.Column="1" VerticalAlignment="Center"
+                IsReadOnly="True" Margin="5"/>
+            <TextBox Grid.Row="3" Grid.Column="1" VerticalAlignment="Center"
+                IsReadOnly="True" Margin="5"/>
+        </Grid>
+        
+        <!-- X and Y axis -->
+        
+        <Slider Orientation="Vertical" Height="200" Width="200" Grid.Row="0" Grid.Column="2" Margin="10"/>
+        <Slider Orientation="Horizontal" Width="200" Grid.Row="0" Grid.Column="2" Margin="10"/>
+        
     </Grid>
 </UserControl>
