--- a/FreeMoVR Server3/Views/Connect.xaml
+++ b/FreeMoVR Server3/Views/Connect.xaml
@@ -5,7 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="525">
-    <Grid>
-        <TextBlock Text="MEEP"/>
+    <Grid Name="Layout">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <!-- Start -->
+      
+
+        <!-- Stop -->
     </Grid>
 </UserControl>
